--- a/Zaheen/Contact.html
+++ b/Zaheen/Contact.html
@@ -22,9 +22,9 @@
 <body>
     <nav class="nav-bar">
         <ul class="nav">
-            <li class="nav-link home"><a href="/index.html">Home</a></li>
-            <li class="nav-link gallery"><a href="/Gallery.html">Gallery</a></li>
-            <li class="nav-link contact"><a href="/Contact.html">Contact</a></li>
+            <li class="nav-link home"><a href="./index.html">Home</a></li>
+            <li class="nav-link gallery"><a href="./Gallery.html">Gallery</a></li>
+            <li class="nav-link contact"><a href="./Contact.html">Contact</a></li>
         </ul>
     </nav>
 
