--- a/Zaheen/Gallery.html
+++ b/Zaheen/Gallery.html
@@ -19,25 +19,25 @@
 <body>
     <nav class="nav-bar">
         <ul class="nav">
-            <li class="nav-link home"><a href="/index.html">Home</a></li>
-            <li class="nav-link gallery"><a href="/Gallery.html">Gallery</a></li>
-            <li class="nav-link contact"><a href="/Contact.html">Contact</a></li>
+            <li class="nav-link home"><a href="./index.html">Home</a></li>
+            <li class="nav-link gallery"><a href="./Gallery.html">Gallery</a></li>
+            <li class="nav-link contact"><a href="./Contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="gallery">
     <div class="grid-container">
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid2"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid1"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid3"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid4"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid5"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid6"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid7"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid8"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid9"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid10"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid11"></div></a>
-        <a href="/images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid12"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid2"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid1"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid3"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid4"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid5"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid6"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid7"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid8"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid9"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid10"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid11"></div></a>
+        <a href="./images/imagg.jpg" target="_blank" rel="noopener noreferrer"><div class="grid-item grid12"></div></a>
 
     </div>
 </div>
