--- a/Projects/WebDevAss/pages/Contact.html
+++ b/Projects/WebDevAss/pages/Contact.html
@@ -22,7 +22,7 @@
         <ul class="nav">
             <li class="nav-link home"><a href="./home.html">Home</a></li>
             <li class="nav-link gallery"><a href="./Gallery.html">Gallery</a></li>
-            <li class="nav-link contact"><a href="./Contact.html">Contact</a></li>
+            <li class="nav-link contact active"><a href="./Contact.html">Contact</a></li>
         </ul>
     </nav>
 
