--- a/Projects/WebDevAss/pages/Gallery.html
+++ b/Projects/WebDevAss/pages/Gallery.html
@@ -20,7 +20,7 @@
     <nav class="nav-bar">
         <ul class="nav">
             <li class="nav-link home"><a href="./home.html">Home</a></li>
-            <li class="nav-link gallery"><a href="./Gallery.html">Gallery</a></li>
+            <li class="nav-link gallery active"><a href="./Gallery.html">Gallery</a></li>
             <li class="nav-link contact"><a href="./Contact.html">Contact</a></li>
         </ul>
     </nav>
