--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" href="res/icon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +29,7 @@
 <body class="main-content">
         
         <main id="main" >
-            <section  class="section sec1 home active" id="home">
+            <section  class="section sec1 active" id="home">
                 <h2 id="main-head1">Hi,</h2><br>
                 <h2 id="main-head2">I'm Manazir,</h2><br>
                 <h2 id="main-head3">Developer</h2><br>
@@ -45,7 +46,7 @@
                     </div>    
                 </div>
             </section>
-            <section class="section sec2 about" id="about">
+            <section class="section sec2 " id="about">
                 <div id="about-p">
                     <p><span id="i">I</span>
                         &nbsp;&nbsp;possess a strong commitment to my work, exemplified by my
@@ -57,8 +58,8 @@
                     </p>
                 </div>
             </section>
-            <section class="section sec3 skill" id="skill"></section>
-            <section class="section sec4 work" id="work"></section>
+            <section class="section sec3 " id="skill"></section>
+            <section class="section sec4 " id="work"></section>
             <section class="section sec5 " id="contact"></section>
         </main>
         
