--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -1,4 +1,5 @@
 <html>
+<title>MNZR</title>
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +28,7 @@
     </div>
 </nav>
 <body class="main-content">
-        
+
         <main id="main" >
             <section  class="section sec1 active" id="home">
                 <h2 id="main-head1">Hi,</h2><br>
@@ -49,17 +50,52 @@
             </section>
             <section class="section sec2 " id="about">
                 <div id="about-p">
-                    <p><span id="i">I</span>
+                    <!-- <p><span id="i">I</span>
                         &nbsp;&nbsp;possess a strong commitment to my work, exemplified by my
                         dedication and methodical approach with excellent interpersonal
                         skills. I have a genuine enthusiasm for learning and actively seek
                         opportunities to acquire new skills and knowledge. Moreover, I
                         proactively embrace additional responsibilities, demonstrating my
                         drive to growth.
-                    </p>
+                    </p> -->
+                    <div class="about-me-container">
+                        <br><br>
+                        <h1><span id="i">About Me</span></h1>
+                        <br><br>
+                        <p>Hello, I'm Manazir Ali, a passionate undergraduate student pursuing a BSc (Hons) in Computer Science at the University of Westminster, UK.</p>
+                        <br>
+                        <p><strong>Academic Background</strong> <br>I am currently immersed in the world of computer science, gaining valuable insights into various aspects of the field. My academic journey has equipped me with a strong foundation in programming, algorithms, and problem-solving.</p>
+                        <br>
+                        <p><strong>Areas of Interest</strong><br> I have a keen interest in Software Development, Programming, Robotics also enthusiastic about exploring innovative solutions to real-world challenges.</p>
+                        <br>
+                        <p><strong>Professional Development</strong> <br>Beyond the classroom, I actively seek opportunities to enhance my skills and knowledge. I am engaged in [mention any relevant extracurricular activities, projects, or internships]. These experiences have not only broadened my understanding but also allowed me to apply theoretical concepts to practical scenarios.</p>
+                        <br>    
+                        <p><strong>Why Computer Science</strong><br> Computer science, for me, is not just a field of study but a dynamic realm where creativity and logical thinking converge. I am excited about the endless possibilities and the transformative impact technology can have on society.</p>
+                        <br>
+                        <p><strong>Goals</strong><br> Looking forward, I aspire to specialize in artificial intelligence, leveraging cutting-edge technologies to solve complex problems. My goal is to enter the industry, working on impactful projects that push the boundaries of innovation. Additionally, I am committed to contributing to the open-source community, sharing knowledge, and inspiring the next generation of technologists. I see my career as a continuous journey of learning, adaptation, and making a positive impact on the ever-evolving landscape of technology.
+                        </p>
+                        <br>
+                        <p><strong>Let's Connect</strong><br> I am always open to new opportunities, collaborations, and discussions. Whether it's about technology, projects, or just sharing ideas, feel free to <a href="https://linktr.ee/mnzr_ruez" target="_blank">connect with me</a>.</p>
+                        <br>
+                        <p>Thank you for visiting my portfolio, and I look forward to connecting with like-minded individuals who share a passion for the limitless possibilities of computer science.</p>
+                        <br>
+                    </div>
                 </div>
             </section>
-            <section class="section sec3 " id="skill"></section>
+            <section class="section sec3 " id="skill">
+                <div class="bg-effect">
+                    <div class="item bg bg-img1">HTML</div>
+                    <div class="item bg bg-img2">CSS</div>
+                    <div class="item bg bg-img3">JS</div>
+                    <div class="item bg bg-img4">XML</div>
+                    <div class="item bg bg-img5">Git</div>
+                    <div class="item bgm bg-img6">Python</div>
+                    <div class="item bgm bg-img7">Java</div>
+                    <div class="item bgm bg-img8">Angular</div>
+                    <div class="item bgm bg-img9">React</div>
+                    <div class="item bgm bg-img10">json</div>
+                </div>
+            </section>
             <section class="section sec4 " id="work"></section>
             <section class="section sec5 " id="contact"></section>
         </main>
