--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -28,7 +28,15 @@
     </div>
 </nav>
 <body class="main-content">
-
+    <div class="mobile">
+        <div class="error-container">
+            <h1 class="error">404</h1>
+            <img class="error-icon" src="res/icon.png" alt="MNZR">
+            <p class="errorMessage"><span>"</span> The mobile version of this site is currently undergoing maintenance. <br>
+                Please consider using the desktop version instead. <span>"</span></p>    
+        </div>
+    </div>
+    
         <main id="main" >
             <section  class="section sec1 active" id="home">
                 <h2 id="main-head1">Hi,</h2><br>
