--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -33,7 +33,7 @@
             <h1 class="error">404</h1>
             <img class="error-icon" src="res/icon.png" alt="MNZR">
             <p class="errorMessage"><span>"</span> The mobile version of this site is currently undergoing maintenance. <br>
-                Please consider using the desktop version instead. <span>"</span><br>~mnzr</p>    
+                Please consider using the desktop version instead. <span>"</span><br><br>~mnzr</p>    
         </div>
     </div>
     
