--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -12,9 +12,10 @@
 </head>
 <nav id="side-bar">
     <div id="logo" data-id="home">
-        <a>
-            <h1 class="mnzr" data-id="home" style="color: whitesmoke;">MNZR</h1>
-        </a>
+        <div class="mnzr-logo" data-id="home">
+
+            <!-- <h1 class="mnzr" data-id="home" style="color: whitesmoke;">MNZR</h1> -->
+        </div>
         
     </div>
     <div id="nav-links">                    
