--- a/Projects/CODSoft/L1/index.html
+++ b/Projects/CODSoft/L1/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://css.gg/css?=|facebook|mail|twitter|youtube" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Landing Page</title>
+    <title>MNZR Coffee Station</title>
 </head>
 <body>
 
