--- a/Projects/CODSoft/L1/index.html
+++ b/Projects/CODSoft/L1/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <div class="nav-link nav-link-1"><a href="#home">Home</a></div>
                 <div class="nav-link nav-link-2"><a href="#about">About</a></div>
-                <div class="nav-link nav-link-0"><a href="#"><img src="./res/Mil1.png" width="180px" href="#"></a></div>                
+                <div class="nav-link nav-link-0"><a href="./res/Station.png"><img src="./res/Mil1.png" width="180px" href="#"></a></div>                
                 <div class="nav-link nav-link-3"><a href="#menu">Menu</a></div>
                 <div class="nav-link nav-link-4"><a href="#contact">Contact</a></div>
             </nav>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="contact contact-center">
-            <div class="contact-logo"><a href="#"><img src="./res/Mil1.png" width="250px" href="#"></a></div>                
+            <div class="contact-logo"><a href="#"><img src="./res/Mil1.png" width="250px" href="./res/Station.png"></a></div>                
 
             <div class="center-links">
                 <div><i class="gg-facebook"></i></div>
