update links learnmore

--- a/Projects/CODSoft/L1/index.html
+++ b/Projects/CODSoft/L1/index.html
@@ -33,9 +33,11 @@
                     Where every cup is a moment of pure indulgence. “</p>
             </div>
         </div>
+        <a class="learnmore-btn" href="https://en.wikipedia.org/wiki/Coffee#Serving">
         <div class="learnmore-btn">
             <div class="btn">Learn more</div>
         </div>
+        </a>
     </section>
 
     <section class="container about-container" id="about">
