--- a/Projects/CODSoft/L1/index.html
+++ b/Projects/CODSoft/L1/index.html
@@ -33,7 +33,7 @@
                     Where every cup is a moment of pure indulgence. “</p>
             </div>
         </div>
-        <a class="learnmore-btn" href="https://en.wikipedia.org/wiki/Coffee#Serving">
+        <a class="learnmore-btn" href="https://en.wikipedia.org/wiki/Coffee#Serving" target="_blank">
         <div class="learnmore-btn">
             <div class="btn">Learn more</div>
         </div>
@@ -97,10 +97,10 @@
             <div class="contact-logo"><a href="#"><img src="./res/Mil1.png" width="250px" href="#"></a></div>                
 
             <div class="center-links">
-                <div><i class="gg-facebook"></i></div>
-                <div><i class="gg-youtube"></i></div>
-                <div><i class="gg-twitter"></i></div>
-                <div><i class="gg-mail"></i></div>
+                <a href="http://facebook.com" target="_blank"><div><i class="gg-facebook"></i></div></a>
+                <a href="http://youtube.com" target="_blank"><div><i class="gg-youtube"></i></div></a>
+                <a href="http://twitter.com" target="_blank"><div><i class="gg-twitter"></i></div></a>
+                <a href="http://gmail.com" target="_blank"><div><i class="gg-mail"></i></div></a>
             </div>
             <p class="Copyrights">Copyright 2024 © Manazir Ali</p>
 
