--- a/Projects/CODSoft/L1/index.html
+++ b/Projects/CODSoft/L1/index.html
@@ -97,10 +97,10 @@
             <div class="contact-logo"><a href="#"><img src="./res/Mil1.png" width="250px" href="#"></a></div>                
 
             <div class="center-links">
-                <a href="http://facebook.com" target="_blank"><div><i class="gg-facebook"></i></div></a>
-                <a href="http://youtube.com" target="_blank"><div><i class="gg-youtube"></i></div></a>
-                <a href="http://twitter.com" target="_blank"><div><i class="gg-twitter"></i></div></a>
-                <a href="http://gmail.com" target="_blank"><div><i class="gg-mail"></i></div></a>
+                <div><a href="http://facebook.com" target="_blank"><i class="gg-facebook"></i></a></div>
+                <div><a href="http://youtube.com" target="_blank"><i class="gg-youtube"></i></a></div>
+                <div><a href="http://twitter.com" target="_blank"><i class="gg-twitter"></i></a></div>
+                <div><a href="http://gmail.com" target="_blank"><i class="gg-mail"></i></a></div>
             </div>
             <p class="Copyrights">Copyright 2024 © Manazir Ali</p>
 
