FULL ZeroHunger Website
full version

--- a/Projects/ZeroHunger WebSite/template.html
+++ b/Projects/ZeroHunger WebSite/template.html
@@ -15,20 +15,20 @@
     <!-- HEADER -->
     <header>
         <nav>
-            <ul class="nav_links">
-                <a href="shop.html"><li class="nav_link nav_link_2">Shop<div class="nav_line nav_dot"></div></li></a>
-                <a href="gallery.html"><li class="nav_link nav_link_3">Gallery<div class="nav_line nav_dot"></div></li></a>
-                <a href="team.html"><li class="nav_link nav_link_4">Team<div class="nav_line nav_dot"></div></li></a>
+            <ul class="nav-links">
+                <a href="shop.html"><li class="nav-link nav-link-2">Shop<div class="nav-line nav-dot"></div></li></a>
+                <a href="gallery.html"><li class="nav-link nav-link-3">Gallery<div class="nav-line nav-dot"></div></li></a>
+                <a href="team.html"><li class="nav-link nav-link-4">Team<div class="nav-line nav-dot"></div></li></a>
             </ul>    
-            <div class="logo_con">
+            <div class="logo-con">
                 <a href="home.html">
                     <div><img src="./Images/Logo2w.png" alt="Zero Hunger Logo"></div>
                 </a>
             </div>
-            <ul class="nav_links">    
-                <a href="sitemap.html"><li class="nav_link nav_link_5">Sitemap<div class="nav_line nav_dot"></div></li></a>
-                <a href="feedback.html"><li class="nav_link nav_link_6">Feedback<div class="nav_line nav_dot"></div></li></a>
-                <a href="userprofile.html"><li class="nav_link nav_link_7">User Profile<div class="nav_line nav_dot"></div></li></a>
+            <ul class="nav-links">    
+                <a href="sitemap.html"><li class="nav-link nav-link-5">Sitemap<div class="nav-line nav-dot"></div></li></a>
+                <a href="feedback.html"><li class="nav-link nav-link-6">Feedback<div class="nav-line nav-dot"></div></li></a>
+                <a href="userprofile.html"><li class="nav-link nav-link-7">User Profile<div class="nav-line nav-dot"></div></li></a>
             </ul>
         </nav>
     </header>
@@ -40,7 +40,7 @@
     
     <!-- FOOTER -->
     <footer>
-        <div><a href="#">Page Editor</a></div>
+        <div><a href="editor-manazir.html">Page Editor</a></div>
         <div class="line"></div>
         <div><p>Manazir Ali</p></div>
     </footer>
