--- a/Projects/ZeroHunger WebSite/splash.html
+++ b/Projects/ZeroHunger WebSite/splash.html
@@ -8,12 +8,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Smythe&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
     <link rel="stylesheet" href="./Style/home.css">
+    <link rel="stylesheet" href="./Style/Design.css" class="rel">
     <link rel="icon" href="./Images/zero HUNGER LOGO.jpg" type="image/x-icon">
     <title>Zero Hunger</title>
 </head>
 <body>
-    
-    <!-- HEADER -->
+    <div class="intro">
+        <img src="./Images/Logo2w.png" alt="Your Logo">
+        <h1 class="logo-header">
+            
+
+        </h1>
+        <div class="team-members">
+            <p>Team Members:</p>
+            <ul type="none">
+                <li class="splash-li">Student 1 - Ibrahim Ifham</li>
+                <li class="splash-li">Student 2 - Manazir Ali</li>
+                <li class="splash-li">Student 3 - Gayathra</li>
+                <li class="splash-li">Student 4 - Kushan Perera</li>
+            </ul>
+        </div>
+        <div class="goal">
+            <ul type="none">
+                <li class="splash-li">Sustainable for zero hunger</li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div>
+        <!-- HEADER -->
     <header>
         <nav>
             <ul class="nav-links">
@@ -184,7 +208,11 @@
         <div><p>Manazir Ali</p></div>
     </footer>
     <!-- END FOOTER -->
-</body>
+    </div>
 
+
+
+    <script src="./Script/Logo.js"></script>
+</body>
 
 </html>
