--- a/Projects/ZeroHunger WebSite/userprofile.html
+++ b/Projects/ZeroHunger WebSite/userprofile.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Smythe&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./Style/style.css">
+    <link rel="stylesheet" href="./Style/style1.css">
     <link rel="stylesheet" href="./Style/userprofile.css">
     <link rel="icon" href="./Images/zero HUNGER LOGO.jpg" type="image/x-icon">
     <title>User Profile</title>
@@ -31,7 +31,7 @@
             <ul class="nav_links">    
                 <a href="sitemap.html"><li class="nav_link nav_link_5">Sitemap<div class="nav_line nav_dot"></div></li></a>
                 <a href="feedback.html"><li class="nav_link nav_link_6" >Feedback<div class="nav_line nav_dot"></div></li></a>
-                <a href="userprofile.html"><li class="nav_link nav_link_7">User Profile<div class="nav_line nav_dot"></div></li></a>
+                <a href="userprofile.html"><li class="nav_link nav_link_7 active">User Profile<div class="nav_line nav_dot"></div></li></a>
             </ul>
         </nav>
     </header>
@@ -98,7 +98,7 @@
     <!-- footer -->
      <!-- FOOTER -->
      <footer>
-        <div><a href="#">Page Editor</a></div>
+        <div><a href="editor-chanith.html">Page Editor</a></div>
         <div class="line"></div>
         <div><p>Chanith</p></div>
     </footer>
@@ -108,5 +108,4 @@
     
     
 </body>
-
 </html>
