--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -43,7 +43,7 @@
                 <h2 id="main-head1">Hi,</h2><br>
                 <h2 id="main-head2">I'm Manazir,</h2><br>
                 <h2 id="main-head3">Developer</h2><br>
-                <p id="main-sub">Programmer / Application Developer </p>
+                <p id="main-sub">Web / Application Developer </p>
     
                 <div class="contact">
                     <div>
@@ -92,7 +92,7 @@
                 </div>
             </section>
             <section class="section sec3 " id="skill">
-                <div class="bg-effect">
+                <!-- <div class="bg-effect">
                     <div class="item bg bg-img1">HTML</div>
                     <div class="item bg bg-img2">CSS</div>
                     <div class="item bg bg-img3">JS</div>
@@ -103,7 +103,32 @@
                     <div class="item bgm bg-img8">Angular</div>
                     <div class="item bgm bg-img9">React</div>
                     <div class="item bgm bg-img10">json</div>
+                </div> -->
+                <div class="about-p">
+                    <div class="about-me-container">
+                        <br><br>
+                        <h1><span id="i">Skills</span></h1>
+                        <br><br>
+                        <p>Hello, I'm Manazir Ali, a passionate undergraduate student pursuing a BSc (Hons) in Computer Science at the University of Westminster, UK.</p>
+                        <br>
+                        <p><strong>Academic Background</strong> <br>I am currently immersed in the world of computer science, gaining valuable insights into various aspects of the field. My academic journey has equipped me with a strong foundation in programming, algorithms, and problem-solving.</p>
+                        <br>
+                        <p><strong>Areas of Interest</strong><br> I have a keen interest in Software Development, Programming, Robotics also enthusiastic about exploring innovative solutions to real-world challenges.</p>
+                        <br>
+                        <p><strong>Professional Development</strong> <br>Beyond the classroom, I actively seek opportunities to enhance my skills and knowledge. I am engaged in [mention any relevant extracurricular activities, projects, or internships]. These experiences have not only broadened my understanding but also allowed me to apply theoretical concepts to practical scenarios.</p>
+                        <br>    
+                        <p><strong>Why Computer Science</strong><br> Computer science, for me, is not just a field of study but a dynamic realm where creativity and logical thinking converge. I am excited about the endless possibilities and the transformative impact technology can have on society.</p>
+                        <br>
+                        <p><strong>Goals</strong><br> Looking forward, I aspire to specialize in artificial intelligence, leveraging cutting-edge technologies to solve complex problems. My goal is to enter the industry, working on impactful projects that push the boundaries of innovation. Additionally, I am committed to contributing to the open-source community, sharing knowledge, and inspiring the next generation of technologists. I see my career as a continuous journey of learning, adaptation, and making a positive impact on the ever-evolving landscape of technology.
+                        </p>
+                        <br>
+                        <p><strong>Let's Connect</strong><br> I am always open to new opportunities, collaborations, and discussions. Whether it's about technology, projects, or just sharing ideas, feel free to <a href="https://linktr.ee/mnzr_ruez" target="_blank">connect with me</a>.</p>
+                        <br>
+                        <p>Thank you for visiting my portfolio, and I look forward to connecting with like-minded individuals who share a passion for the limitless possibilities of computer science.</p>
+                        <br>
+                    </div>
                 </div>
+                
             </section>
             <section class="section sec4 " id="work"></section>
             <section class="section sec5 " id="contact"></section>
